# second_brain

./: README.md  pyproject.toml  sb.sh  setup.sh
src/: __init__.py  config.py  main.py  note.py  vault.py
